# WeatherStation

./: LICENSE  README.md
Firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
Firmware/DevConfig/: FactoryInfo.json
Firmware/components/Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt  gfxfont.h  glcdfont.c
Firmware/components/Devices/: CMakeLists.txt  Display_SSD1306.cpp  MyDisplay.cpp  Shtc3_Sensor.cpp
Firmware/components/Devices/include/: Display_SSD1306.h  MyDisplay.h  Shtc3_Sensor.h
Firmware/components/Memory/: CMakeLists.txt  ParamRepo.c
Firmware/components/Memory/include/: ParamRepo.h
Firmware/components/MqttDevice/: CMakeLists.txt  MqttDevice.c
Firmware/components/MqttDevice/include/: MqttDevice.h
Firmware/components/MyHal/: AdcPort.cpp  CMakeLists.txt  GpioPort.cpp  I2cPort.cpp  SpiPort.cpp
Firmware/components/MyHal/include/: AdcPort.h  GpioPort.h  I2cPort.h  PortBase.h  SpiPort.h
Firmware/components/Sntp/: CMakeLists.txt  SntpProcessor.c
Firmware/components/Sntp/include/: SntpProcessor.h
Firmware/components/WebServer/: CMakeLists.txt  SimpleServer.c
Firmware/components/WebServer/WebPage/: ServerMock.py  mainPage.html
Firmware/components/WebServer/include/: SimpleServer.h
Firmware/components/WifiConnect/: CMakeLists.txt  WifiConnect.c
Firmware/components/WifiConnect/include/: WifiConnect.h
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  WeatherStation.cpp
